fix nav item spacing and tour message

--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -48,6 +48,7 @@
     text-transform: capitalize;
     margin: 0.5rem 1rem;
     cursor: pointer;
+    padding: 0px;
 }
 
 .nav-item button{
